--- a/index.html
+++ b/index.html
@@ -3,11 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/index.css">
-  <script src="js/index.js"></script>
-  <title>Dummy</title>
+
+  <!-- Native CSS Start -->
+  <link rel="stylesheet" href="/css/index.css">
+  <!-- Native CSS Start -->
+
+  <!-- Bootstrap CSS Start -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <!-- Bootstrap CSS End -->
+
+  <!-- Icon Pack Start -->
+  <script src="https://kit.fontawesome.com/94b68a0c09.js" crossorigin="anonymous"></script>
+  <!-- Icon Pack End -->
+  <title>নিরাপত্তা বলয়</title>
 </head>
 <body>
-	<h1>Dummy</h1>
+  <main class="p-3" style="max-width:400px;">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 my-3">
+        <h1 class="fs-1" style="font-weight:800;">নিরাপত্তা বলয়</h1>
+      </div>
+    </div>
+    <div class="row" style="height:15vh;">
+      <div class="col-6">
+        <button class="btn btn-danger w-100 h-100">Rape Aid</button>
+      </div>
+      <div class="col-6">
+        <button class="btn btn-dark w-100 h-100">Terrorist Attack</button>
+      </div>
+    </div>
+    <div class="row">
+      
+    </div>
+  </div>
+  </main>
+  
+  <!-- Native JS Start -->
+<script src="js/index.js"></script>
+<!-- Native JS End -->
+
+<!-- Bootstrap JS Start -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+<!-- Bootstrap JS End -->
 </body>
 </html>
