--- a/index.html
+++ b/index.html
@@ -18,23 +18,41 @@
   <title>নিরাপত্তা বলয়</title>
 </head>
 <body>
-  <main class="p-3" style="max-width:400px;">
+  <main class="p-3 d-block mx-auto" style="max-width:400px;">
   <div class="container">
     <div class="row">
       <div class="col-12 my-3">
         <h1 class="fs-1" style="font-weight:800;">নিরাপত্তা বলয়</h1>
       </div>
     </div>
-    <div class="row" style="height:15vh;">
+    <div class="row my-3" style="height:15vh;">
       <div class="col-6">
-        <button class="btn btn-danger w-100 h-100">Rape Aid</button>
+        <button class="btn btn-danger w-100 h-100">ধর্ষণ প্রতিরোধ</button>
       </div>
       <div class="col-6">
-        <button class="btn btn-dark w-100 h-100">Terrorist Attack</button>
+        <button class="btn btn-dark w-100 h-100">জঙ্গী আক্রমণ</button>
       </div>
     </div>
-    <div class="row">
-      
+    <div class="row my-3" style="height:15vh;">
+      <div class="col-8">
+        <button class="btn btn-primary w-100 h-100">অ্যাম্বুলেন্স</button>
+      </div>
+      <div class="col-4">
+        <button class="btn btn-danger w-100 h-100">ফায়ার সার্ভিস</button>
+      </div>
+    </div>
+    <div class="row my-3" style="height:15vh;">
+      <div class="co-12">
+        <button class="btn btn-dark w-100 h-100">পুলিশ সহায়তা</button>
+      </div>
+    </div>
+    <div class="row my-3" style="height:15vh;">
+      <div class="col-6">
+        <button class="btn btn-warning w-100 h-100">সড়ক দুর্ঘটনা</button>
+      </div>
+      <div class="col-6">
+        <button class="btn btn-primary w-100 h-100">নৌকাডুবি</button>
+      </div>
     </div>
   </div>
   </main>
