--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
 
   <!-- Native CSS Start -->
   <link rel="stylesheet" href="/css/index.css">
-  <!-- Native CSS Start -->
+  <style>
+  
+  @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Bengali:wght@300;400;500;600;700&display=swap');
+
+    * {
+  font-family: 'Noto Serif Bengali', serif;
+  font-weight: 700;
+  
+}
+  </style>
+  <!-- Native CSS END -->
 
   <!-- Bootstrap CSS Start -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -27,31 +37,42 @@
     </div>
     <div class="row my-3" style="height:15vh;">
       <div class="col-6">
-        <button class="btn btn-danger w-100 h-100">ধর্ষণ প্রতিরোধ</button>
+        <a href=“sms:+8801734719061&body=I%20would%20like%20you%20to%20take%20a%20look%20at%20my%20home%20please.%20My%20Name%20and%20Address%20is”>
+        <button class="btn btn-danger w-100 h-100">
+          <div class="row">
+            <div class="col-4">
+              <i class="fa-3x fa-solid fa-bell text-center"></i>
+            </div>
+            <div class="col-8">
+              ধর্ষণ প্রতিরোধ
+            </div>
+          </div>
+          </button>
+          </a>
       </div>
       <div class="col-6">
-        <button class="btn btn-dark w-100 h-100">জঙ্গী আক্রমণ</button>
+        <button class="btn btn-dark w-100 h-100"><i class="fa-solid fa-person-through-window"></i>জঙ্গী আক্রমণ</button>
       </div>
     </div>
     <div class="row my-3" style="height:15vh;">
       <div class="col-8">
-        <button class="btn btn-primary w-100 h-100">অ্যাম্বুলেন্স</button>
+        <button class="btn btn-primary w-100 h-100"><i class="fa-solid fa-truck-medical"></i>অ্যাম্বুলেন্স</button>
       </div>
       <div class="col-4">
-        <button class="btn btn-danger w-100 h-100">ফায়ার সার্ভিস</button>
+        <button class="btn btn-danger w-100 h-100"><i class="fa-solid fa-fire-extinguisher"></i>ফায়ার সার্ভিস</button>
       </div>
     </div>
     <div class="row my-3" style="height:15vh;">
       <div class="co-12">
-        <button class="btn btn-dark w-100 h-100">পুলিশ সহায়তা</button>
+        <button class="btn btn-dark w-100 h-100"><i class="fa-solid fa-handcuffs"></i>পুলিশ সহায়তা</button>
       </div>
     </div>
     <div class="row my-3" style="height:15vh;">
       <div class="col-6">
-        <button class="btn btn-warning w-100 h-100">সড়ক দুর্ঘটনা</button>
+        <button class="btn btn-warning w-100 h-100"><i class="fa-solid fa-car-burst"></i>সড়ক দুর্ঘটনা</button>
       </div>
       <div class="col-6">
-        <button class="btn btn-primary w-100 h-100">নৌকাডুবি</button>
+        <button class="btn btn-primary w-100 h-100"><i class="fa-solid fa-ship"></i>নৌকাডুবি</button>
       </div>
     </div>
   </div>
