--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <!-- Native CSS Start -->
   <link rel="stylesheet" href="/css/index.css">
   <style>
-  
-  @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Bengali:wght@300;400;500;600;700&display=swap');
+
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Bengali:wght@300;400;500;600;700&display=swap');
 
     * {
-  font-family: 'Noto Serif Bengali', serif;
-  font-weight: 700;
-  
-}
+      font-family: 'Noto Serif Bengali', serif;
+      font-weight: 700;
+
+    }
   </style>
   <!-- Native CSS END -->
 
@@ -29,61 +29,110 @@
 </head>
 <body>
   <main class="p-3 d-block mx-auto" style="max-width:400px;">
-  <div class="container">
-    <div class="row">
-      <div class="col-12 my-3">
-        <h1 class="fs-1" style="font-weight:800;">নিরাপত্তা বলয়</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 my-3">
+          <h1 class="fs-1" style="font-weight:800;">আপনি কোন বিষয়ে সহায়তা চান?</h1>
+        </div>
       </div>
-    </div>
-    <div class="row my-3" style="height:15vh;">
-      <div class="col-6">
-        <a href=“sms:+8801734719061&body=I%20would%20like%20you%20to%20take%20a%20look%20at%20my%20home%20please.%20My%20Name%20and%20Address%20is”>
-        <button class="btn btn-danger w-100 h-100">
-          <div class="row">
-            <div class="col-4">
-              <i class="fa-3x fa-solid fa-bell text-center"></i>
-            </div>
-            <div class="col-8">
-              ধর্ষণ প্রতিরোধ
-            </div>
-          </div>
-          </button>
+      <div class="row my-3" style="height:15vh;">
+        <div class="col-6">
+            <a href="sms:+8801734719061?&body=Hello%2C%20this%20is%20a%20text%20message!"><button class="btn btn-danger w-100 h-100">
+              <div class="row">
+                <div class="col-4">
+                  <i class="fa-3x fa-solid fa-bell text-center"></i>
+                </div>
+                <div class="col-8">
+                  ধর্ষণ প্রতিরোধ
+                </div>
+              </div>
+            </button></a>
           </a>
+        </div>
+        <div class="col-6">
+          <a href="sms:+8801734719061?&body=Hello%2C%20this%20is%20a%20text%20message!"><button class="btn btn-dark w-100 h-100">
+            <div class="row">
+                <div class="col-4">
+                  <i class="fa-3x fa-solid fa-person-through-window"></i>
+                </div>
+                <div class="col-8">
+                  জঙ্গী আক্রমণ
+                </div>
+              </div>
+        </div>
       </div>
-      <div class="col-6">
-        <button class="btn btn-dark w-100 h-100"><i class="fa-solid fa-person-through-window"></i>জঙ্গী আক্রমণ</button>
+      <div class="row my-3" style="height:15vh;">
+        <div class="col-8">
+          <a href="sms:+8801734719061?&body=Hello%2C%20this%20is%20a%20text%20message!"><button class="btn btn-primary w-100 h-100">
+            <div class="row">
+                <div class="col-4">
+                  <i class="fa-3x fa-solid fa-truck-medical"></i>
+                </div>
+                <div class="col-8">
+                 জরুরি অ্যাম্বুলেন্স সেবা
+                </div>
+              </div>
+          </button></a>
+        </div>
+        <div class="col-4">
+          <a href="sms:+8801734719061?&body=Hello%2C%20this%20is%20a%20text%20message!"><button class="btn btn-danger w-100 h-100">
+            <div class="row">
+                <div class="col-12">
+                  <i class="fa-3x fa-solid fa-fire-extinguisher"></i>
+                </div>
+              </div>
+          </button></a>
+        </div>
+      </div>
+      <div class="row my-3" style="height:15vh;">
+        <div class="co-12">
+          <a href="sms:+8801734719061?&body=Hello%2C%20this%20is%20a%20text%20message!"><button class="btn btn-dark w-100 h-100">
+            <div class="row">
+                <div class="col-4">
+                  <i class="fa-3x fa-solid fa-handcuffs"></i>
+                </div>
+                <div class="col-8">
+                 জরুরি<br>পুলিশ সহায়তা
+                </div>
+              </div>
+              </button></a>
+        </div>
+      </div>
+      <div class="row my-3" style="height:15vh;">
+        <div class="col-6">
+          <a href="sms:+8801734719061?&body=Hello%2C%20this%20is%20a%20text%20message!"><button class="btn btn-warning w-100 h-100">
+            <div class="row">
+                <div class="col-4">
+                  <i class="fa-3x fa-solid fa-car-burst"></i>
+                </div>
+                <div class="col-8">
+                  সড়ক দুর্ঘটনা
+                </div>
+              </div>
+              </button></a>
+        </div>
+        <div class="col-6">
+          <a href="sms:+8801734719061?&body=Hello%2C%20this%20is%20a%20text%20message!"><button class="btn btn-primary w-100 h-100">
+            <div class="row">
+                <div class="col-4">
+                  <i class="fa-3x fa-solid fa-ship"></i>
+                </div>
+                <div class="col-8">
+                  নৌকাডুবি সহায়তা
+                </div>
+              </div>
+              </button></a>
+        </div>
       </div>
     </div>
-    <div class="row my-3" style="height:15vh;">
-      <div class="col-8">
-        <button class="btn btn-primary w-100 h-100"><i class="fa-solid fa-truck-medical"></i>অ্যাম্বুলেন্স</button>
-      </div>
-      <div class="col-4">
-        <button class="btn btn-danger w-100 h-100"><i class="fa-solid fa-fire-extinguisher"></i>ফায়ার সার্ভিস</button>
-      </div>
-    </div>
-    <div class="row my-3" style="height:15vh;">
-      <div class="co-12">
-        <button class="btn btn-dark w-100 h-100"><i class="fa-solid fa-handcuffs"></i>পুলিশ সহায়তা</button>
-      </div>
-    </div>
-    <div class="row my-3" style="height:15vh;">
-      <div class="col-6">
-        <button class="btn btn-warning w-100 h-100"><i class="fa-solid fa-car-burst"></i>সড়ক দুর্ঘটনা</button>
-      </div>
-      <div class="col-6">
-        <button class="btn btn-primary w-100 h-100"><i class="fa-solid fa-ship"></i>নৌকাডুবি</button>
-      </div>
-    </div>
-  </div>
   </main>
-  
-  <!-- Native JS Start -->
-<script src="js/index.js"></script>
-<!-- Native JS End -->
 
-<!-- Bootstrap JS Start -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-<!-- Bootstrap JS End -->
+  <!-- Native JS Start -->
+  <script src="js/index.js"></script>
+  <!-- Native JS End -->
+
+  <!-- Bootstrap JS Start -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+  <!-- Bootstrap JS End -->
 </body>
 </html>
