--- a/index.html
+++ b/index.html
@@ -37,28 +37,28 @@
       </div>
       <div class="row my-3" style="height:15vh;">
         <div class="col-6">
-            <a href="sms:+8801734719061?&body=Hello%2C%20this%20is%20a%20text%20message!"><button class="btn btn-danger w-100 h-100">
-              <div class="row">
+          <a href="sms:+8801734719061?&body=Hello%2C%20this%20is%20a%20text%20message!"><button class="btn btn-danger w-100 h-100">
+            <div class="row">
                 <div class="col-4">
-                  <i class="fa-3x fa-solid fa-bell text-center"></i>
+                  <i class="fa-3x fa-solid fa-bell"></i>
                 </div>
                 <div class="col-8">
                   ধর্ষণ প্রতিরোধ
                 </div>
               </div>
-            </button></a>
-          </a>
+              </button></a>
         </div>
         <div class="col-6">
-          <a href="sms:+8801734719061?&body=Hello%2C%20this%20is%20a%20text%20message!"><button class="btn btn-dark w-100 h-100">
+          <a href="sms:+8801734719061?&body=Hello%2C%20this%20is%20a%20text%20message!"><button class="btn btn-warning w-100 h-100">
             <div class="row">
                 <div class="col-4">
-                  <i class="fa-3x fa-solid fa-person-through-window"></i>
+                  <i class="fa-3x fa-solid fa-car-burst"></i>
                 </div>
                 <div class="col-8">
-                  জঙ্গী আক্রমণ
+                  সড়ক দুর্ঘটনা
                 </div>
               </div>
+              </button></a>
         </div>
       </div>
       <div class="row my-3" style="height:15vh;">
@@ -103,16 +103,16 @@
           <a href="sms:+8801734719061?&body=Hello%2C%20this%20is%20a%20text%20message!"><button class="btn btn-warning w-100 h-100">
             <div class="row">
                 <div class="col-4">
-                  <i class="fa-3x fa-solid fa-car-burst"></i>
+                  <i class="fa-3x fa-solid fa-user-ninja"></i>
                 </div>
                 <div class="col-8">
-                  সড়ক দুর্ঘটনা
+                  জঙ্গী আক্রমণ
                 </div>
               </div>
               </button></a>
         </div>
         <div class="col-6">
-          <a href="sms:+8801734719061?&body=Hello%2C%20this%20is%20a%20text%20message!"><button class="btn btn-primary w-100 h-100">
+          <a href="sms:+8801734719061?&body=Hello%2C%20this%20is%20a%20text%20message!"><button class="btn btn-info w-100 h-100">
             <div class="row">
                 <div class="col-4">
                   <i class="fa-3x fa-solid fa-ship"></i>
