--- a/index.html
+++ b/index.html
@@ -28,10 +28,20 @@
   <title>নিরাপত্তা বলয়</title>
 </head>
 <body>
+  <div class="w-100">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid my-auto">
+          <p class="navbar-brand h1 mb-0">
+            নিরাপত্তা বলয়
+          </p>
+          <button class="btn btn-danger" onclick="location.href = '/contact';"><i class="fa-solid fa-circle-info pe-2"></i>বিস্তারিত</button>
+        </div>
+      </nav>
+    </div>
   <main class="p-3 d-block mx-auto" style="max-width:400px;">
     <div class="container">
       <div class="row">
-        <div class="col-12 my-3">
+        <div class="col-12 mb-2">
           <h1 class="fs-1" style="font-weight:800;">আপনি কোন বিষয়ে সহায়তা চান?</h1>
         </div>
       </div>
