--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
                   <i class="fa-3x fa-solid fa-bell"></i>
                 </div>
                 <div class="col-8">
-                  ধর্ষণ প্রতিরোধ
+                  নির্যাতন প্রতিরোধ
                 </div>
               </div>
               </button></a>
         </div>
         <div class="col-6">
-          <a href="sms:+8801734719061?&body=Hello%2C%20this%20is%20a%20text%20message!"><button class="btn btn-warning w-100 h-100">
+          <a href="sms:+8801734719061?&body=Fatiha%20is%20facing%20child%20abuse%0A%0AUpazilla%20Parishad%2C%20Bogura%20Sadar%2C%20Bogura"><button class="btn btn-warning w-100 h-100">
             <div class="row">
                 <div class="col-4">
                   <i class="fa-3x fa-solid fa-car-burst"></i>
