--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
 </head>
 <body>
   <div class="w-100">
-      <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid my-auto">
-          <p class="navbar-brand h1 mb-0">
-            নিরাপত্তা বলয়
-          </p>
-          <button class="btn btn-danger" onclick="location.href = '/contact';"><i class="fa-solid fa-circle-info pe-2"></i>বিস্তারিত</button>
-        </div>
-      </nav>
-    </div>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid my-auto">
+        <p class="navbar-brand h1 mb-0">
+          নিরাপত্তা বলয়
+        </p>
+        <button class="btn btn-danger" onclick="location.href = '/contact';"><i class="fa-solid fa-circle-info pe-2"></i>বিস্তারিত</button>
+      </div>
+    </nav>
+  </div>
   <main class="p-3 d-block mx-auto" style="max-width:400px;">
     <div class="container">
       <div class="row">
@@ -47,91 +47,91 @@
       </div>
       <div class="row my-3" style="height:15vh;">
         <div class="col-6">
-          <a href="sms:+8801734719061?&body=Hello%2C%20this%20is%20a%20text%20message!"><button class="btn btn-danger w-100 h-100">
+          <a href="sms:+8801734719061?&body=Fatiha%20is%20in%20trouble.%0A%0AUpazilla%20Parishad%2C%20Bogura%20Sadar%2C%20Bogura."><button class="btn btn-danger w-100 h-100">
             <div class="row">
-                <div class="col-4">
-                  <i class="fa-3x fa-solid fa-bell"></i>
-                </div>
-                <div class="col-8">
-                  নির্যাতন প্রতিরোধ
-                </div>
+              <div class="col-4">
+                <i class="fa-3x fa-solid fa-bell"></i>
               </div>
-              </button></a>
+              <div class="col-8">
+                নির্যাতন প্রতিরোধ
+              </div>
+            </div>
+          </button></a>
         </div>
         <div class="col-6">
           <a href="sms:+8801734719061?&body=Fatiha%20is%20facing%20child%20abuse%0A%0AUpazilla%20Parishad%2C%20Bogura%20Sadar%2C%20Bogura"><button class="btn btn-warning w-100 h-100">
             <div class="row">
-                <div class="col-4">
-                  <i class="fa-3x fa-solid fa-car-burst"></i>
-                </div>
-                <div class="col-8">
-                  সড়ক দুর্ঘটনা
-                </div>
+              <div class="col-4">
+                <i class="fa-3x fa-solid fa-car-burst"></i>
               </div>
-              </button></a>
+              <div class="col-8">
+                সড়ক দুর্ঘটনা
+              </div>
+            </div>
+          </button></a>
         </div>
       </div>
       <div class="row my-3" style="height:15vh;">
         <div class="col-8">
-          <a href="sms:+8801734719061?&body=Hello%2C%20this%20is%20a%20text%20message!"><button class="btn btn-primary w-100 h-100">
+          <a href="sms:+8801734719061?&body=Fatiha%20is%20in%20trouble.%0A%0AUpazilla%20Parishad%2C%20Bogura%20Sadar%2C%20Bogura."><button class="btn btn-primary w-100 h-100">
             <div class="row">
-                <div class="col-4">
-                  <i class="fa-3x fa-solid fa-truck-medical"></i>
-                </div>
-                <div class="col-8">
-                 জরুরি অ্যাম্বুলেন্স সেবা
-                </div>
+              <div class="col-4">
+                <i class="fa-3x fa-solid fa-truck-medical"></i>
               </div>
+              <div class="col-8">
+                জরুরি অ্যাম্বুলেন্স সেবা
+              </div>
+            </div>
           </button></a>
         </div>
         <div class="col-4">
-          <a href="sms:+8801734719061?&body=Hello%2C%20this%20is%20a%20text%20message!"><button class="btn btn-danger w-100 h-100">
+          <a href="sms:+8801734719061?&body=Fatiha%20is%20in%20trouble.%0A%0AUpazilla%20Parishad%2C%20Bogura%20Sadar%2C%20Bogura."><button class="btn btn-danger w-100 h-100">
             <div class="row">
-                <div class="col-12">
-                  <i class="fa-3x fa-solid fa-fire-extinguisher"></i>
-                </div>
+              <div class="col-12">
+                <i class="fa-3x fa-solid fa-fire-extinguisher"></i>
               </div>
+            </div>
           </button></a>
         </div>
       </div>
       <div class="row my-3" style="height:15vh;">
         <div class="co-12">
-          <a href="sms:+8801734719061?&body=Hello%2C%20this%20is%20a%20text%20message!"><button class="btn btn-dark w-100 h-100">
+          <a href="sms:+8801734719061?&body=Fatiha%20is%20in%20trouble.%0A%0AUpazilla%20Parishad%2C%20Bogura%20Sadar%2C%20Bogura."><button class="btn btn-dark w-100 h-100">
             <div class="row">
-                <div class="col-4">
-                  <i class="fa-3x fa-solid fa-handcuffs"></i>
-                </div>
-                <div class="col-8">
-                 জরুরি<br>পুলিশ সহায়তা
-                </div>
+              <div class="col-4">
+                <i class="fa-3x fa-solid fa-handcuffs"></i>
               </div>
-              </button></a>
+              <div class="col-8">
+                জরুরি<br>পুলিশ সহায়তা
+              </div>
+            </div>
+          </button></a>
         </div>
       </div>
       <div class="row my-3" style="height:15vh;">
         <div class="col-6">
-          <a href="sms:+8801734719061?&body=Hello%2C%20this%20is%20a%20text%20message!"><button class="btn btn-warning w-100 h-100">
+          <a href="sms:+8801734719061?&body=Fatiha%20is%20in%20trouble.%0A%0AUpazilla%20Parishad%2C%20Bogura%20Sadar%2C%20Bogura."><button class="btn btn-warning w-100 h-100">
             <div class="row">
-                <div class="col-4">
-                  <i class="fa-3x fa-solid fa-user-ninja"></i>
-                </div>
-                <div class="col-8">
-                  জঙ্গী আক্রমণ
-                </div>
+              <div class="col-4">
+                <i class="fa-3x fa-solid fa-user-ninja"></i>
               </div>
-              </button></a>
+              <div class="col-8">
+                জঙ্গী আক্রমণ
+              </div>
+            </div>
+          </button></a>
         </div>
         <div class="col-6">
-          <a href="sms:+8801734719061?&body=Hello%2C%20this%20is%20a%20text%20message!"><button class="btn btn-info w-100 h-100">
+          <a href="sms:+8801734719061?&body=Fatiha%20is%20in%20trouble.%0A%0AUpazilla%20Parishad%2C%20Bogura%20Sadar%2C%20Bogura."><button class="btn btn-info w-100 h-100">
             <div class="row">
-                <div class="col-4">
-                  <i class="fa-3x fa-solid fa-ship"></i>
-                </div>
-                <div class="col-8">
-                  নৌকাডুবি সহায়তা
-                </div>
+              <div class="col-4">
+                <i class="fa-3x fa-solid fa-ship"></i>
               </div>
-              </button></a>
+              <div class="col-8">
+                নৌকাডুবি সহায়তা
+              </div>
+            </div>
+          </button></a>
         </div>
       </div>
     </div>
