--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p class="navbar-brand h1 mb-0">
           নিরাপত্তা বলয়
         </p>
-        <button class="btn btn-danger" onclick="location.href = '/contact';"><i class="fa-solid fa-circle-info pe-2"></i>বিস্তারিত</button>
+        <button class="btn btn-danger" onclick="location.href = 'https://himeeeelll.netlify.app';"><i class="fa-solid fa-circle-info pe-2"></i>বিস্তারিত</button>
       </div>
     </nav>
   </div>
